--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 group 'org.example'
@@ -10,10 +10,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
 }
 
 test {
     useJUnitPlatform()
 }
+
+apply plugin: 'application'
+apply plugin: 'java'
+
+mainClassName = 'run.App'
