--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ repositories {
 
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.6'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
 }
 
 test {
