--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
     implementation group: 'com.opencsv', name: 'opencsv', version: '5.6'
+    implementation 'org.postgresql:postgresql:42.4.2'
+    implementation 'org.hibernate:hibernate-core:5.6.10.Final'
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'org.jetbrains:annotations:20.1.0'
 }
