--- a/server/build.gradle
+++ b/server/build.gradle
@@ -13,8 +13,15 @@ repositories {
 
 dependencies {
     implementation project(":resources")
+    implementation 'org.postgresql:postgresql:42.4.2'
+    implementation 'org.hibernate:hibernate-core:5.6.10.Final'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
@@ -22,7 +29,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
+/**
 jar {
     manifest {
         attributes "Main-Class": "ServerKt"
@@ -31,3 +38,4 @@ jar {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+*/
